changes in gig opening and compensation icon not showing properly, resolve issue of employeement oppoertunity button not showing properly in mobile view, set button to center only in mobile view in index page

--- a/Aephy.WEB/wwwroot/assets/css/GigOpenings.css
+++ b/Aephy.WEB/wwwroot/assets/css/GigOpenings.css
@@ -356,7 +356,7 @@ h6 {
 
 .GigLevels .box .icon-msg i {
     flex-shrink: 0;
-    font-size: 48px;
+    font-size: 48px !important;
     font-weight: 800;
     color: #fff;
     line-height: 0;
@@ -421,7 +421,7 @@ h6 {
 
 .GigCompensation .box .icon-msg i {
     flex-shrink: 0;
-    font-size: 48px;
+    font-size: 48px !important;
     font-weight: 800;
     color: #fff;
     line-height: 0;
